# rhythm

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  Directory.Build.props  Game.cs  GameScene.cs  Launch.cs  LaunchRig.cs  Main.tscn  README.md  Rhythm.csproj  Rhythm.sln  Scenes.cs  export_presets.cfg  main.tscn  project.godot
.cargo/: config.toml
.github/workflows/: check.yml  deploy.yml
addons/ffmpeg/: ffmpeg.gdextension
analyzers/RhythmAnalyzers/: AnalyzerReleases.Unshipped.md  NullForgivingAnalyzer.cs  RhythmAnalyzers.csproj
assets/: credits.md  game_config.json
assets/default_bgm/: details.sm
assets/note_skins/ddrextreme_default/: manifest.json
assets/note_skins/ddrextreme_note/: manifest.json
assets/note_skins/itg_cel/: manifest.json  mine.glb
assets/shaders/: grade_text.wgsl  health_vial.wgsl
audio/: AudioBuses.cs  MusicPlayer.cs  SfxPlayer.cs  SoundChannel.cs  SoundOptions.cs  TickTrackRenderer.cs
autoload/: Boot.cs  HighScores.cs  Library.cs  Persistence.cs  Settings.cs
config/: Config.cs  FixedGradeDef.cs  GameConfig.cs  GameConfig.tres  GradeDef.cs  GradingConfig.cs  HealthBarConfig.cs  HealthColorStop.cs  HealthGradient.cs  LaneCameraConfig.cs  RatingDef.cs  RhythmCycle.cs  SettingsDefaults.cs  SpeedModifierSet.cs  SpeedModifiers.cs  StageConfig.cs  game_config.tres
core/: Assets.cs  GameAction.cs  Grade.cs  HighScores.cs  Library.cs  MachineSettings.cs  Player.cs  PlayerOptions.cs  RouteParams.cs
core/Stepfile/: Stepfile.cs  StepfileParser.cs  StepfileTiming.cs
godot/: Rhythm.Game.csproj  Rhythm.csproj  Rhythm.sln  export_presets.cfg  main.tscn  project.godot  rhythm.gdextension  rhythm.gdextension.uid
godot/core/: Player.cs  PlayerOptions.cs  SoundTimeline.cs  Units.cs
input/: Actions.cs  NavInput.cs  TouchSteps.cs
nodes/: FpsOverlay.cs  HealthVial.cs  MediaCover.cs  MediaVideoPlayback.cs  Menu.cs  health_vial.gdshader
nodes/StepfilePlayer/: GradeText.cs  GradeText.gdshader  Grading.cs  NoteField.cs  NoteFieldRig.cs  StepfilePlayer.cs  StepfilePlayerGrading.cs
nodes/stepfile_player/: GradeText.cs  Grading.cs  NoteFieldRig.cs  NoteSkin.cs  NoteSkinLoader.cs  StepfilePlayer.cs  StepfilePlayerGrading.cs  grade_text.gdshader
rust/: Cargo.toml
rust/src/: game.rs  launch.rs  lib.rs  main.rs  native.rs  web.rs
rust/src/core/: assets.rs  audio.rs  config.rs  font.rs  high_scores.rs  input.rs  jsonc.rs  library.rs  mod.rs  persist.rs  platform.rs  player.rs  screen.rs  settings.rs  sfx.rs  textures.rs  tick_track.rs  units.rs  video.rs
rust/src/core/stepfile/: clock.rs  mod.rs  music_player.rs  parse.rs
rust/src/dev/: bench.rs  launcher.rs  mod.rs  note_scenarios.rs  profiling.rs  render_grade.rs  render_note.rs  serve.rs
rust/src/nodes/: media_cover.rs  menu.rs  mod.rs
rust/src/nodes/fps_overlay/: fps_overlay.gdshader  mod.rs
rust/src/nodes/health_vial/: mod.rs
rust/src/nodes/media_cover/: mod.rs  stream.rs
rust/src/nodes/stepfile_player/: grade_text.gdshader  grade_text.rs  grading.rs  mod.rs  note_field.rs  note_skin.rs
rust/src/scenes/: audio_settings.rs  grade_sheet.rs  keymap.rs  main_menu.rs  mod.rs  mode_select.rs  score.rs  settings_menu.rs
rust/src/scenes/note_demo/: mod.rs  scenarios.rs
rust/src/scenes/play/: background.rs  clock.rs  mod.rs  tuning.rs
rust/src/scenes/wheel/: info_panel.rs  mod.rs  player_options.rs  ratings.rs  wash.rs
rust/tests/: architecture.rs
scenes/AudioSettings/: AudioSettings.cs  AudioSettings.tscn
scenes/Keymap/: Keymap.tscn  KeymapScene.cs
scenes/MainMenu/: MainMenu.cs  MainMenu.tscn
scenes/ModeSelect/: ModeSelect.cs  ModeSelect.tscn
scenes/Play/: Backgrounds.cs  Play.cs  Play.tscn  Playback.cs  Tuning.cs
scenes/Review/: GradeSheet.cs  GradeSheet.tscn  NoteDemo.cs  NoteDemo.tscn  Scenarios.cs  VialDemo.cs  VialDemo.tscn
scenes/Score/: PlayerColumn.cs  PlayerColumn.tscn  Score.cs  Score.tscn
scenes/SettingsMenu/: SettingsMenu.cs  SettingsMenu.tscn
scenes/StepfileSelect/: OptionsModal.cs  StepfileSelect.tscn  Wheel.cs  WheelInfoPanel.cs  WheelRatings.cs  WheelSlot.tscn
scenes/audio_settings/: AudioSettings.cs  audio_settings.tscn
scenes/keymap/: KeymapScene.cs  keymap.tscn
scenes/main_menu/: MainMenu.cs  main_menu.tscn
scenes/mode_select/: ModeSelect.cs  mode_select.tscn
scenes/play/: Backgrounds.cs  Play.cs  Playback.cs  Tuning.cs  play.tscn
scenes/review/: GradeSheet.cs  NoteDemo.cs  Scenarios.cs  grade_sheet.tscn  note_demo.tscn  vial_demo.tscn
scenes/score/: Score.cs  score.tscn
scenes/settings_menu/: SettingsMenu.cs  settings_menu.tscn
scenes/wheel/: OptionsModal.cs  Wheel.cs  WheelInfoPanel.cs  WheelWash.cs  wheel.tscn
src/: lib.rs  main.rs  native.rs  profiling.rs  web.rs
src/core/: assets.rs  audio.rs  audio_clock.rs  config.rs  font.rs  health_vial.rs  high_scores.rs  input.rs  library.rs  menu.rs  mod.rs  note_field.rs  note_skin.rs  persist.rs  platform.rs  player.rs  scene_flow.rs  screen.rs  settings.rs  sfx.rs  tick_track.rs  units.rs  video.rs
src/integrations/: mod.rs
src/prefabs/: media_cover.rs  menu.rs  mod.rs
src/scenes/: audio_settings.rs  file_select.rs  keymap.rs  main_menu.rs  mod.rs  mode_select.rs  player_options.rs  score.rs  settings_menu.rs
tests/: Rhythm.Architecture.Tests.csproj  architecture.rs  stepfile_parse.rs  stepfile_timing.rs
tools/: Cargo.toml  Program.cs  Rhythm.Tools.csproj  dev.sh  drive.sh  fetch-ffmpeg.sh
tools/src/: launcher.rs  main.rs  serve.rs
ui/: Fade.gdshader  GameLabel.cs  PendingTexture.cs  Screen.cs  Text.cs  Theme.tres  ipagp.ttf.import
web/: index.html
(+42 files in other folders)
