[package]
name = "rhythm"
version = "0.1.0"
edition = "2024"
default-run = "rhythm"

[dependencies]
bevy = { version = "0.19", default-features = false, features = [
    # default features minus bevy_gilrs (gamepad), which needs libudev headers
    "default_app",
    "std",
    "bevy_winit",
    "default_font",
    "2d_bevy_render",
    "scene",
    "picking",
    "ui_api",
    "ui_bevy_render",
    "bevy_ui_widgets",
    "bevy_audio",
    "vorbis",
    "mp3",
    "wav",
    "keyboard",
    "mouse",
    "png",
    "jpeg",
    "serialize",
] }
derive_more = { version = "2", features = ["add", "add_assign", "mul", "not", "display"] }
hound = "3"
# Not used directly: routes the text layouter's ICU4X warnings through `log`
# (and thus the log filter) instead of raw stderr prints in debug builds.
icu_provider = { version = "2", default-features = false, features = ["logging"] }
json_comments = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.19", default-features = false, features = [
    "multi_threaded",
    "x11",
    "wayland",
] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
tiny_http = "0.12"
video-rs = { version = "0.11.0", features = ["ndarray"] }
walkdir = "2"

# The ffmpeg behind video-rs compiles from source and links statically on
# unix; ffmpeg's configure cannot run on Windows, which links the prebuilt
# libraries `FFMPEG_DIR` points at instead.
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "windows")))'.dependencies]
ffmpeg-sys-next = { version = "8.1", features = ["build"] }

[target.'cfg(target_os = "windows")'.dependencies]
ffmpeg-sys-next = "8.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.19", default-features = false, features = ["web", "webgl2"] }
console_error_panic_hook = "0.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
gloo-net = { version = "0.6", default-features = false, features = ["http"] }
gloo-storage = "0.3"
send_wrapper = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlMediaElement",
    "HtmlVideoElement",
    "ImageData",
    "Node",
    "Window",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
